eclipse-workspace/padmini/AlRayan/Zensar Sandbox Full Components/src/objects/Person__c.object
<CustomObject>
    <fields>
        <fullName>All_branches_achieved_IFA_target__c</fullName>
        <label>All branches achieved IFA target</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>All_branches_achieved_income_for_IMT_tar__c</fullName>
        <label>All branches achieved income for IMT</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>April_New_BS_Position__c</fullName>
        <description>Please enter the end of month Net Balance Sheet increase or decrease.  Decreases should be prefixed with a - Thanks Jim</description>
        <inlineHelpText>Please enter the end of month Net Balance Sheet increase or decrease.  Decreases should be prefixed with a - Thanks Jim</inlineHelpText>
        <label>April LTS Net BS Position</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>BTL_April_2014__c</fullName>
        <label>BTL April 2014</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BTL_February_2014__c</fullName>
        <label>BTL February 2014</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BTL_January_2014__c</fullName>
        <label>BTL January 2014</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BTL_June_2014__c</fullName>
        <label>BTL June 2014</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BTL_March_2014__c</fullName>
        <label>BTL March 2014</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>BTL_May_2014__c</fullName>
        <label>BTL May 2014</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Balance_Sheet_Growth__c</fullName>
        <label>Balance Sheet Growth</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Branch__c</fullName>
        <label>Branch</label>
        <picklist>
            <picklistValues>
                <fullName>East Ham</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Edgware Road</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leicester</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manchester</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Small Heath</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Southall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Whitechapel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Knightsbridge Branch</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Glasgow</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CPF_April_2014__c</fullName>
        <label>CPF April 2014</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPF_February_2014__c</fullName>
        <label>CPF February 2014</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPF_January_2014__c</fullName>
        <label>CPF January 2014</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPF_June_2014__c</fullName>
        <label>CPF June 2014</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPF_March_2014__c</fullName>
        <label>CPF March 2014</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>CPF_May_2014__c</fullName>
        <label>CPF May 2014</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Course_Name__c</fullName>
        <label>Course Name</label>
        <picklist>
            <picklistValues>
                <fullName>Best in Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coaching</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Concerns</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Excel training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Induction</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Influencing and Negotiating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Managing for Success</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Power Telesales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premier</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Salesforce Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales through Service</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sharia Training</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>DPS_Income__c</fullName>
        <label>DPS Income</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <picklist>
            <picklistValues>
                <fullName>Branch Network</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Call Centre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HPP Team</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intermediaries</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Premier Banking</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Business Development Managers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Team</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GCC_April_2014__c</fullName>
        <label>GCC April 2014</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GCC_February_2014__c</fullName>
        <label>GCC February 2014</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GCC_January_2014__c</fullName>
        <label>GCC January 2014</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GCC_June_2014__c</fullName>
        <label>GCC June 2014</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GCC_March_2014__c</fullName>
        <label>GCC March 2014</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GCC_May_2014__c</fullName>
        <label>GCC May 2014</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HPP_HPS_April_2014__c</fullName>
        <label>HPP/HPS April 2014</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HPP_HPS_February_2014__c</fullName>
        <label>HPP/HPS February 2014</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HPP_HPS_January_2014__c</fullName>
        <label>HPP/HPS January 2014</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HPP_HPS_June_2014__c</fullName>
        <label>HPP/HPS June 2014</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HPP_HPS_March_2014__c</fullName>
        <label>HPP/HPS March 2014</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HPP_HPS_May_2014__c</fullName>
        <label>HPP/HPS May 2014</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HPP_Seller_is_compliant__c</fullName>
        <label>HPP Seller is compliant</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IMT_Lead_Value__c</fullName>
        <label>IMT Lead - Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>IMT_Lead_Volume__c</fullName>
        <label>IMT Lead - Volume</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>January_LTS_Net_BS__c</fullName>
        <description>Please enter the end of month value from balance sheet</description>
        <inlineHelpText>Please enter the end of month value from balance sheet</inlineHelpText>
        <label>January LTS Net BS Actual</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LTS_April_2014__c</fullName>
        <label>LTS April 2014</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LTS_February_2014__c</fullName>
        <label>LTS February 2014</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LTS_January_2014__c</fullName>
        <label>LTS January 2014</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LTS_June_2014__c</fullName>
        <label>LTS June 2014</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LTS_March_2014__c</fullName>
        <label>LTS March 2014</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LTS_May_2014__c</fullName>
        <label>LTS May 2014</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Less_than_15_decline_rate_for_sellers__c</fullName>
        <inlineHelpText>Less than 15% decline rate for sellers during the quarter. 
Only applications declined that the Head of S&amp;S deems within the control of the seller count towards the decline rate.</inlineHelpText>
        <label>Less than 15% decline rate for sellers</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Less_than_1_upheld_complaint__c</fullName>
        <inlineHelpText>Less than one upheld complaint against branch and contact centre staff.</inlineHelpText>
        <label>Less than 1 upheld complaint</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Less_than_1_upheld_missselling_complaint__c</fullName>
        <inlineHelpText>Less than one upheld miss-selling complaint for HPP Sellers registered against the participating employee during the incentive quarter.</inlineHelpText>
        <label>Less than 1 upheld missselling complaint</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Less_than_5_sickness_during_the_quarter__c</fullName>
        <label>Less than 5% sickness during the quarter</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Less_than_5_working_days_sickness__c</fullName>
        <inlineHelpText>Less than 5 working days sickness within the quarter of the incentive.</inlineHelpText>
        <label>Less than 5 working days sickness</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Manager_s_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Manager&apos;s Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>People1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Member_of_Staff_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Member of Staff Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>People</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Net_Asset_Growth__c</fullName>
        <label>Net Asset Growth</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>No_miss_selling_advice_being_provided__c</fullName>
        <inlineHelpText>No miss-selling/miss-advice being provided by any colleague which may result in the claw back of any monies paid under this incentive (regardless of timescales). 
May result in disciplinary action being taken against staff member concerned.</inlineHelpText>
        <label>No miss-selling/advice being provided</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>No_resignation_submitted_pending__c</fullName>
        <inlineHelpText>No incentives will be pad where resignations have been submitted or pending during the period of the incentive.</inlineHelpText>
        <label>No resignation submitted/pending</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>No_unauthorised_leave_of_absence__c</fullName>
        <label>No unauthorised leave of absence</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Not_within_probation_period__c</fullName>
        <label>Not within probation period</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Plan_Submission_Date__c</fullName>
        <inlineHelpText>Plan Submission Date to be updated on the 1st working day of each quarter</inlineHelpText>
        <label>Plan Submission Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Attended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Did not attend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inivited</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Non Active</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Person</label>
    <listViews>
        <fullName>BDMs</fullName>
        <booleanFilter>1 OR 2 OR 3</booleanFilter>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Department__c</field>
            <operation>equals</operation>
            <value>HPP Team,Intermediaries,Premier Banking,Business Development Managers</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Sharaz,Umar</value>
        </filters>
        <filters>
            <field>NAME</field>
            <operation>equals</operation>
            <value>Sharaz Younas</value>
        </filters>
        <label>BDMs</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Contact_Center</fullName>
        <booleanFilter>(1 AND 2)</booleanFilter>
        <columns>NAME</columns>
        <columns>Department__c</columns>
        <columns>Manager_s_Name__c</columns>
        <columns>Status__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Department__c</field>
            <operation>equals</operation>
            <value>Call Centre</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Contact Center</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Edgware_Road</fullName>
        <columns>NAME</columns>
        <columns>Branch__c</columns>
        <columns>Manager_s_Name__c</columns>
        <columns>Member_of_Staff_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Branch__c</field>
            <operation>equals</operation>
            <value>Edgware Road</value>
        </filters>
        <label>Edgware Road</label>
    </listViews>
    <listViews>
        <fullName>Knightsbridge_Branch</fullName>
        <columns>NAME</columns>
        <columns>Branch__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Branch__c</field>
            <operation>equals</operation>
            <value>Knightsbridge Branch</value>
        </filters>
        <label>Knightsbridge Branch</label>
        <language>en_US</language>
        <sharedTo>
            <group>All_internal_users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Leicester</fullName>
        <columns>NAME</columns>
        <columns>Branch__c</columns>
        <columns>Manager_s_Name__c</columns>
        <columns>Member_of_Staff_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Branch__c</field>
            <operation>equals</operation>
            <value>Leicester</value>
        </filters>
        <label>Leicester</label>
    </listViews>
    <listViews>
        <fullName>Management</fullName>
        <columns>NAME</columns>
        <columns>Department__c</columns>
        <columns>Manager_s_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Abul Fozoll,Mohammad Sadek,Ali Vania,Esmail Jasat,Khalid Khan,zegum hussain</value>
        </filters>
        <label>Management</label>
    </listViews>
    <listViews>
        <fullName>Manchester</fullName>
        <columns>NAME</columns>
        <columns>Member_of_Staff_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Branch__c</field>
            <operation>contains</operation>
            <value>Manch,Manchester</value>
        </filters>
        <label>Manchester</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Momin_s_Team</fullName>
        <booleanFilter>(1) OR (2)</booleanFilter>
        <columns>NAME</columns>
        <columns>Member_of_Staff_Name__c</columns>
        <columns>Manager_s_Name__c</columns>
        <columns>Branch__c</columns>
        <columns>Department__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Manager_s_Name__c</field>
            <operation>equals</operation>
            <value>Momin Mahmood</value>
        </filters>
        <filters>
            <field>Member_of_Staff_Name__c</field>
            <operation>equals</operation>
            <value>Momin Mahmood</value>
        </filters>
        <label>Momin&apos;s Team</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Small_Heath_Branch</fullName>
        <booleanFilter>1 or 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Manager_s_Name__c</columns>
        <columns>Branch__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Branch__c</field>
            <operation>contains</operation>
            <value>small,Small Heath</value>
        </filters>
        <filters>
            <field>OWNER.FIRST_NAME</field>
            <operation>equals</operation>
            <value>zubair</value>
        </filters>
        <label>Small Heath Branch</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Whitechapel</fullName>
        <columns>NAME</columns>
        <columns>Member_of_Staff_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Branch__c</field>
            <operation>contains</operation>
            <value>Whitechapel</value>
        </filters>
        <label>Whitechapel</label>
    </listViews>
    <listViews>
        <fullName>Xactly</fullName>
        <columns>NAME</columns>
        <columns>Member_of_Staff_Name__c</columns>
        <columns>Manager_s_Name__c</columns>
        <columns>Branch__c</columns>
        <columns>Department__c</columns>
        <filterScope>Everything</filterScope>
        <label>Xactly</label>
        <language>en_US</language>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Person Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>People</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>